# aura-security

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPROVEMENTS.md  LICENSE  README.md  clawdbot-security-report.md  docker-compose.yml  package-lock.json  package.json
config/: scam-signatures.example.json  trust-weights.example.json
contracts/: SecurityScanEnforcer.sol
contracts/interfaces/: ICaveatEnforcer.sol  IEAS.sol
deploy/: AWS-DEPLOYMENT.md  aura-swarm.service  aura-x402.service  deploy-swarm.sh  nginx-rate-limit.conf
deploy/terraform/: main.tf  terraform.tfvars.example
discord-bot/: index.mjs  package.json  register-commands.mjs
docs/: SCALING-ARCHITECTURE.md  X402-INTEGRATION-SPEC.md  pitch-deck.html
examples/: sample-input.json  test-audit.ts  test-payload.json
monitoring/: README.md  bot-health-check.sh  cloudwatch-alarms.sh  health-check.sh  set-bot-logo.sh
python/: README.md  pyproject.toml
python/aurasecurity/: __init__.py  cli.py
scripts/: check-balance.ts  deploy-enforcer.ts  register-schema.ts
skills/aura-security-scanner/: SKILL.md
src/: cli.ts  index.ts  serve-visualizer.ts
src/agents/: base.ts  index.ts  types.ts
src/auditor/: pipeline.ts
src/aura/: client.ts  index.ts  server.ts
src/client/: index.ts
src/config/: loader.ts
src/database/: index.ts
src/erc7710/: attestation.ts  index.ts  schema.ts  types.ts
src/integrations/: ai-verifier.ts  aura-scanner.ts  config.ts  enhanced-scanner.ts  github.ts  gitlab.ts  index.ts  local-scanner.ts  webhook.ts  (+7 more)
telegram-bot/: README.md  index.mjs
visualizer/: dashboard.html  docs.html  index-minimal.html  index.html  landing-backup-20260119-162124.html  landing.html
(+64 files in other folders)
